se modifica ruta de llamado a imagenes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   style="padding: 16px 32px; box-shadow: -2px 4px 12px 0px #575757;">
 
   <div class="flex items-center">
-    <img src="src/assets/imagen/logo.svg" alt="Logo" class="h-10 w-auto">
+    <img src="assets/imagen/logo.svg" alt="Logo" class="h-10 w-auto">
   </div>
 
   <div class="flex items-center space-x-8">
