--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="max-h-[650px] overflow-y-auto">
-          <div *ngFor="let notif of notifications" class="px-4 py-3 border-b border-gray-100">
+          <div *ngFor="let notif of notifications" class="px-4 py-3">
             <div class="flex items-start space-x-3 relative">
               <div
                 class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center text-xs font-bold text-gray-600 relative">
