--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,24 +8,9 @@
         </div>
     </div>
     <div class="flex justify-center items-end gap-6">
-        <div class="w-6 h-6 relative">
-            <a (click)="goToSocial('YouTube')" href="javascript:void(0)" aria-label="YouTube">
-                <img src="assets/imagenes/youtube.svg" alt="Youtube">
-            </a>
-        </div>
-        <div class="w-6 h-6 relative">
-            <a (click)="goToSocial('Facebook')" href="javascript:void(0)" aria-label="Facebook">
-                <img src="assets/imagenes/facebook.svg" alt="Facebook">
-            </a>
-        </div>
-        <div class="w-6 h-6 relative">
-            <a (click)="goToSocial('Instagram')" href="javascript:void(0)" aria-label="Instagram">
-                <img src="assets/imagenes/instagram.svg" alt="Instagram">
-            </a>
-        </div>
-        <div class="w-6 h-6 relative">
-            <a (click)="goToSocial('LinkedIn')" href="javascript:void(0)" aria-label="LinkedIn">
-                <img src="assets/imagenes/linkedin.svg" alt="LoLinkedIngo">
+        <div *ngFor="let link of footerLinks" class="w-6 h-6 relative">
+            <a (click)="goToSocial(link.platform)" href="javascript:void(0)" [attr.aria-label]="link.platform">
+                <img [src]="link.icon" [alt]="link.alt" class="w-full h-full object-contain" />
             </a>
         </div>
     </div>
